--- a/Practice Kata Problems.ipynb
+++ b/Practice Kata Problems.ipynb
@@ -376,6 +376,85 @@
     "        if seq.count(i)%2!=0:\n",
     "            return i"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Are they the \"same\"?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Given two arrays a and b write a function comp(a, b) that checks whether the two arrays have the \"same\" elements, with the same multiplicities.\n",
+    "# \"Same\" means, here, that the elements in b are the elements in a squared, regardless of the order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check: for every number in array1, if num**2 in array2 => return True, else return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a = [121, 144, 19, 161, 19, 144, 19, 11]  \n",
+    "a=[]\n",
+    "b = [121, 14641, 20736, 361, 25921, 361, 20736, 361]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comp(array1, array2):\n",
+    "    try:\n",
+    "        return sorted([i ** 2 for i in array1]) == sorted(array2)\n",
+    "    except:\n",
+    "        return False\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comp(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
