--- a/Practice Kata Problems.ipynb
+++ b/Practice Kata Problems.ipynb
@@ -566,6 +566,98 @@
     "    s = s.lower()\n",
     "    return s.count('x') == s.count('o')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Shortest Word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# given a string of words, return the length of the shortest word(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nFor Example:\\nInput: \"bitcoin take over the world maybe who knows perhaps\"\\nOutput: 3\\n'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "For Example:\n",
+    "Input: \"bitcoin take over the world maybe who knows perhaps\"\n",
+    "Output: 3\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"bitcoin take over the world maybe who knows perhaps\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_short(s):\n",
+    "    l = []\n",
+    "    for i in s.split():\n",
+    "        l.append(len(i))\n",
+    "    return(min(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_short(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_short(s):\n",
+    "    return min(len(x) for x in s.split())"
+   ]
   }
  ],
  "metadata": {
