--- a/Practice Kata Problems.ipynb
+++ b/Practice Kata Problems.ipynb
@@ -1745,6 +1745,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Take a Ten Minute Walk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nFor Example:\\nInput1: ['n','s','n','s','n','s','n','s','n','s']\\nOutput: True\\nInput2: 'w','e','w','e','w','e','w','e','w','e','w','e'\\nOutput False\\n\""
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "For Example:\n",
+    "Input1: ['n','s','n','s','n','s','n','s','n','s']\n",
+    "Output: True\n",
+    "Input2: 'w','e','w','e','w','e','w','e','w','e','w','e'\n",
+    "Output False\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_valid_walk(walk):\n",
+    "    x,y = (0,0)\n",
+    "    l = []\n",
+    "    if len(walk) != 10:\n",
+    "        print(False)\n",
+    "    else:\n",
+    "        for i in walk:\n",
+    "            l.append(i)\n",
+    "        for i in l:\n",
+    "            if i == 'n':\n",
+    "                x += 1\n",
+    "            elif i == 's':\n",
+    "                x -= 1\n",
+    "            elif i == 'e':\n",
+    "                y += 1\n",
+    "            elif i == 'w':\n",
+    "                y -= 1\n",
+    "        print(x==0 and y ==0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "is_valid_walk(['n','s','n','s','n','s','n','s','n','s'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "is_valid_walk(['s', 'e', 'w', 'n', 'n', 's', 'e', 's', 'n', 's'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cleaner solution\n",
+    "def isValidWalk(walk):\n",
+    "    return len(walk) == 10 and walk.count('n') == walk.count('s') and walk.count('e') == walk.count('w')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Detect Panagram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# given a string, detect whether it is a panagram or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "\n",
+    "def is_panagram(s):\n",
+    "    for i in string.ascii_lowercase:\n",
+    "        if i in s.lower():\n",
+    "            pass\n",
+    "        else:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_panagram(\"The quick, brown fox jumps over the lazy dog!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "e\n",
+      "f\n",
+      "g\n",
+      "h\n",
+      "i\n",
+      "j\n",
+      "k\n",
+      "l\n",
+      "m\n",
+      "n\n",
+      "o\n",
+      "p\n",
+      "q\n",
+      "r\n",
+      "s\n",
+      "t\n",
+      "u\n",
+      "v\n",
+      "w\n",
+      "x\n",
+      "y\n",
+      "z\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in string.ascii_lowercase:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcdefghijklmnopqrstuvwxyz'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.ascii_lowercase"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
