--- a/Practice Kata Problems.ipynb
+++ b/Practice Kata Problems.ipynb
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1762,7 +1762,7 @@
        "\"\\nFor Example:\\nInput1: ['n','s','n','s','n','s','n','s','n','s']\\nOutput: True\\nInput2: 'w','e','w','e','w','e','w','e','w','e','w','e'\\nOutput False\\n\""
       ]
      },
-     "execution_count": 122,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1852,27 +1852,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Detect Panagram"
+    "#### Detect Pangram"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# given a string, detect whether it is a panagram or not"
+    "# given a string, detect whether it is a pangram or not"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "\n",
-    "def is_panagram(s):\n",
+    "def is_pangram(s):\n",
     "    for i in string.ascii_lowercase:\n",
     "        if i in s.lower():\n",
     "            pass\n",
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1892,77 +1892,70 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_panagram(\"The quick, brown fox jumps over the lazy dog!\")"
+    "is_pangram(\"The quick, brown fox jumps over the lazy dog!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculating with Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n",
-      "b\n",
-      "c\n",
-      "d\n",
-      "e\n",
-      "f\n",
-      "g\n",
-      "h\n",
-      "i\n",
-      "j\n",
-      "k\n",
-      "l\n",
-      "m\n",
-      "n\n",
-      "o\n",
-      "p\n",
-      "q\n",
-      "r\n",
-      "s\n",
-      "t\n",
-      "u\n",
-      "v\n",
-      "w\n",
-      "x\n",
-      "y\n",
-      "z\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in string.ascii_lowercase:\n",
-    "    print(i)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'abcdefghijklmnopqrstuvwxyz'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "string.ascii_lowercase"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
